Fixed appearance of boxes in technologies pages. Too much negative space before.

--- a/themes/drphilv5/css/style-dark.css
+++ b/themes/drphilv5/css/style-dark.css
@@ -6365,7 +6365,7 @@ a:visited {
 }
 
 .box {
-  width: 200px;
+  width: 90%;
   height: 120px;
   display: flex;
   flex-flow: column wrap;
