--- a/themes/drphilv5/scss/technologies.scss
+++ b/themes/drphilv5/scss/technologies.scss
@@ -1,6 +1,6 @@
 .box {
     // background-color: $bg-color;
-    width: 200px;
+    width: 90%;
     height: 120px;
     display: flex;
     flex-flow: column wrap;
